2019-03-21  Akira Kakuto  <kakuto@w32tex.org>

	* pdftoepdf-poppler0.75.0.cc: Support poppler-0.75.0.

2019-01-27  Karl Berry  <karl@gnu.org>

	* pdftex.web (pdf_omit_charset_code, pdf_omit_charset
	print_param,
	<Put each...>,
	get_pdf_omit_charset)
	* writefont.c (write_fontdescriptor): reverse sense and name
	to \pdfomitcharset.

2019-01-27  Karl Berry  <karl@gnu.org>

	* pdftex.web (pdf_include_charset_code, pdf_include_charset):
	new primitive parameter \pdfincludecharset.
	(print_param): print_esc it.
	(Put each...): insert in hash table.
	(get_pdf_include_charset): new fn to get its value.
	* writefont.c (write_fontdescriptor): check it before outputting
	CharSet.

2019-01-19  Karl Berry  <karl@tug.org>

        * NEWS,
        * pdftex_version.h,
        * pdftex.web (pdftex_revision, pdftex_version_string):
        version [1.40.]20 for TL19.

2019-01-08  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftosrc-poppler0.72.0.cc: Support poppler-0.73.0.

2019-01-07  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* tounicode.c (deftounicode): suppress a compiler warning:
	format specifies type 'unsigned int' but the argument has
	type 'long' [-Wformat]
	* writet3.c (writet3): suppress a compiler warning:
	add explicit braces to avoid dangling else [-Wdangling-else]

2018-12-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftosrc-poppler0.72.0.cc, pdftoepdf-poppler0.72.0.cc:
	Add to support system poppler-0.72.0.
	* NEWS: Change comments on system poppler.

2018-11-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftosrc-poppler0.71.0.cc, pdftoepdf-poppler0.71.0.cc:
	Add to support system poppler-0.71.0.
	* NEWS: Change comments on system poppler.

2018-10-24  Karl Berry  <karl@tug.org>

	* writet1.c (t1_check_unusual_charstring): don't call
	strlen(t1_buf_array) if it is null.
	From Luigi, 22 Oct 2018 22:43:03.

2018-10-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftosrc-newpoppler.cc: Add a comment that it works upto
	the poppler 0.70.0.