@@ -1,3 +1,9 @@
+2019-03-30  Akira Kakuto  <kakuto@w32tex.org>
+
+	* epdf.c: Allow spaces in CharSet.
+	Reported by Robert:
+	https://tug.org/pipermail/pdftex/2019-March/009146.html
+
 2019-03-21  Akira Kakuto  <kakuto@w32tex.org>
 
 	* pdftoepdf-poppler0.75.0.cc: Support poppler-0.75.0.
